...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Add Classes"
        app:titleTextColor="@color/white" />

    <Spinner
        android:id="@+id/edit_class_year_spinner"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:minHeight="48sp"
        android:layout_marginTop="68sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/edit_class_quarter_spinner"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:minHeight="48sp"
        android:layout_marginTop="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_class_year_spinner"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/edit_class_size_spinner"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:minHeight="48sp"
        android:layout_marginTop="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_class_quarter_spinner"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_class_subject_textview"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:inputType="textCapWords"
        android:minHeight="48sp"
        android:hint="@string/subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_class_size_spinner" />

    <EditText
        android:id="@+id/edit_class_course_number_textview"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:minHeight="48sp"
        android:hint="@string/course_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_class_subject_textview" />

    <Button
        android:id="@+id/edit_class_enter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12sp"
        android:onClick="enter"
        android:text="@string/enter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_class_done_btn" />

    <Button
        android:id="@+id/edit_class_done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24sp"
...
